# MyMemo

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  Dockerfile  MEMORY_HUB.md  Makefile  README.dev.md  README.md  docker-compose.dev.yml  docker-compose.memory-hub.yml  docker-compose.yml  memory-hub.env.example  pyproject.toml
.claude/: settings.json
.claude/hooks/: inject-memories.js  session-context.js  store-memories.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installation_issue.yml
.github/workflows/: build-and-release.yml  build-dev.yml  test.yml
agent/: _shared.py  agent.py  granola_agent.py  granola_subagents.py  meeting.py  meeting_models.py  meeting_prompts.py  subagents.py  test_meeting.md
api/: CLAUDE.md  auth.py  command_service.py  credentials_service.py  main.py  memory_import_service.py  memory_service.py  models.py  personalization_summary_service.py
api/routers/: auth.py  config.py  embedding_rebuild.py  memories.py  models.py  personalization.py  sources.py
commands/: CLAUDE.md  __init__.py  embedding_commands.py
desktop/: package-lock.json  package.json
desktop/src/: main.ts  preload.ts  services.ts  tray.ts
docs/: index.md
docs/0-START-HERE/: quick-start-cloud.md  quick-start-local.md  quick-start-openai.md
docs/1-INSTALLATION/: docker-compose.md  from-source.md  index.md  single-container.md
docs/5-CONFIGURATION/: environment-reference.md  ollama.md  openai-compatible.md  reverse-proxy.md  security.md
docs/6-TROUBLESHOOTING/: faq.md  index.md  quick-fixes.md
docs/7-DEVELOPMENT/: contributing.md  quick-start.md  (+1 more)
examples/: README.md  docker-compose-full-local.yml  docker-compose-ollama.yml  docker-compose-single.yml  docker-compose-speaches.yml
frontend/: package-lock.json  package.json
memory-hub-mcp/: README.md  materializer.py  memory_hub_mcp.py  pyproject.toml
open_notebook/: CLAUDE.md  config.py
scripts/: import_sayso.py
tests/: test_import_sayso.py  test_materializer.py  test_memory_api.py  test_memory_import.py  test_memory_service.py  test_utils.py
(+251 files in other folders)
